[package]
name = "semantic-exit"
description = "Semantic exit codes inspired by HTTP status codes"
authors = ["Bob Lail <lail@squareup.com>", "Scott Robinson <ssr@squareup.com>"]
license = "Apache-2.0"
repository = "https://github.com/square/exit"
readme = "README.md"
version = "1.0.0"
edition = "2021"

[dependencies]
num-traits = "0.2"
num-derive = "0.4"
thiserror = "1.0.58"

[dev-dependencies]
libc = "0.2"
regex = "1.10.4"
test-case = "3.3.1"
