[tool.poetry]
name = "exit"
version = "0.1.0"
description = "Semantic exit codes for CLI tools."
authors = ["John Weachock <jweachock@squareup.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
