[tool.poetry]
name = "exit"
version = "0.1.0"
description = "Semantic exit codes for CLI tools."
authors = ["John Weachock <jweachock@squareup.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
black = "^24.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
